--- a/src/components/Header/styles.scss
+++ b/src/components/Header/styles.scss
@@ -14,7 +14,7 @@
     position: relative;
     width: 80%;
     margin: 0 auto;
-    padding: 100px 0 0;
+    padding: 20px 0 0;
     .logo-img {
       width: 100%;
       height: auto;
